--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "dependencies": {
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.2"
+    "express-rate-limit": "^7.1.5",
+    "express-ws": "^5.0.2",
+    "http-cache-middleware": "^1.4.1",
+    "jsonwebtoken": "^9.0.2",
+    "memory-cache": "^0.2.0",
+    "socket.io": "^4.7.4"
   }
 }
